--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -4,5 +4,5 @@ head
 	meta(charset="UTF-8")
 	title Fantonica
 	script
-		include ./g_scripts/jquery.min.js
+		include ./g_scripts/jquery/dist/jquery.min.js
 body
