kuoto and font-awesome

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -3,6 +3,7 @@ html(lang="en")
 head
 	meta(charset="UTF-8")
 	title Fantonica
+	link(rel="stylesheet", type="text/css", href="index.css")
 	script
 		include ./g_scripts/jquery/dist/jquery.min.js
 body
