--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -6,4 +6,6 @@ head
 	link(rel="stylesheet", type="text/css", href="index.css")
 	script
 		include ./g_scripts/jquery/dist/jquery.min.js
+		include ./g_scripts/jquery/dist/jquery.min.map
 body
+	include ./blocks/header.jade
