--- a/src/styl/index.styl
+++ b/src/styl/index.styl
@@ -2,5 +2,11 @@
 @import 'kouto-swiss'
 normalize()
 
+// COLORS
+RED = #f15a5a
+BLUE = #2e90b8
+GREY = #8c8c8c
+
+
 body
-	background-color #FF9191
+	font-family 'Open Sans', sans-serif
