style for header+nav

--- a/src/styl/index.styl
+++ b/src/styl/index.styl
@@ -1,12 +1,15 @@
-@import '../../node_modules/font-awesome-stylus/stylus'
 @import 'kouto-swiss'
-normalize()
 
 // COLORS
 RED = #f15a5a
 BLUE = #2e90b8
 GREY = #8c8c8c
 
+// GLOBAL
+normalize()
 
 body
 	font-family 'Open Sans', sans-serif
+
+// IMPORT BLOCKS
+@import './blocks/header.styl'
