--- a/src/jade/blocks/header.jade
+++ b/src/jade/blocks/header.jade
@@ -2,10 +2,11 @@ header
 	nav
 		._container
 			.logo
-				img(src="images/logo.png")
+				img(src="img/logo.png")
 			
 			.mobile-menu-button
 				button
+					i.fa.fa-bars
 			
 			ul._navbar
 				li.active
