--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -4,6 +4,7 @@ head
 	meta(charset="UTF-8")
 	title Fantonica
 	link(rel="stylesheet", type="text/css", href="index.css")
+	link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css")
 	script
 		include ./g_scripts/jquery/dist/jquery.min.js
 		include ./g_scripts/jquery/dist/jquery.min.map
