--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -3,6 +3,7 @@ html(lang="en")
 head
 	meta(charset="UTF-8")
 	title Fantonica
+	|<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,400,500,700,900" rel="stylesheet">
 	link(rel="stylesheet", type="text/css", href="index.css")
 	link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css")
 	script
