--- a/src/styl/blocks/header.styl
+++ b/src/styl/blocks/header.styl
@@ -39,6 +39,7 @@ header
 		margin 0
 		width 80%
 		list-style-type none
+		background-color #fff
 		li
 			transition background-color 0.2s ease-out 0.2s
 			transition border-top-width 0.2s ease-in 0.2s
