promo block styles

--- a/src/styl/blocks/header.styl
+++ b/src/styl/blocks/header.styl
@@ -40,6 +40,7 @@ header
 		width 80%
 		list-style-type none
 		background-color #fff
+		display none //TESTING!!!!!!!!!!!!!!!!!!!!!!1
 		li
 			transition background-color 0.2s ease-out 0.2s
 			transition border-top-width 0.2s ease-in 0.2s
