--- a/src/styl/blocks/promo.styl
+++ b/src/styl/blocks/promo.styl
@@ -1,5 +1,5 @@
 .promo
-	margin em(94) 0
+	margin em(94) 0 0
 	background-image url(./img/header-bg.jpg)
 	background-position 63% 0
 	background-repeat no-repeat
