--- a/src/styl/blocks/how_it_works.styl
+++ b/src/styl/blocks/how_it_works.styl
@@ -1,11 +1,12 @@
 .how-it
+	clearfix()
 	._container
 		gs('fluid')
 	.steps
 		col(12)
 	.step
-		clearfix()
 		col(12)
+		clearfix()
 		i
 			font-size em(56)
 			padding em(8)
@@ -13,8 +14,23 @@
 			color BLUE
 		h4
 			font-size em(24)
-			line-height 0.1
-			font-weight 200
+			font-weight 600
+			margin 0
+			padding 0
+			line-height 2.5
 		p
 			font-weight 200
-			line-height 0.1
+			margin 0
+
++media-query( all, min-width 980px )
+	.how-it
+		._container
+			gs('fixed', 12, 70px)
+		.steps
+			margin-top em(30)
+			margin-bottom em(20)
+		.step
+			col(3.9)
+			h4
+				line-height 1.3
+				font-size em(19)
