--- a/src/styl/blocks/promo.styl
+++ b/src/styl/blocks/promo.styl
@@ -38,7 +38,7 @@
 			background-color RED
 			border none
 			text-transform uppercase
-			padding em(5) em(30)
+			padding em(8) em(30)
 
 +media-query( all, min-width 960px )
 	.promo
@@ -47,7 +47,13 @@
 			gs('fixed')
 		.banner
 			col(6)
+			h1
+				margin em(15) 0 0
+			p
+				margin 0
 			input
 				width 70%
+				margin-top em(10)
 			button
 				padding em(10) em(40)
+				margin-top em(10)
