--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -13,3 +13,4 @@ body
 	include ./blocks/header.jade
 	include ./blocks/promo.jade
 	include ./blocks/how_it_works.jade
+	include ./blocks/documentation.jade
