--- a/src/styl/index.styl
+++ b/src/styl/index.styl
@@ -27,3 +27,4 @@ body
 @import './blocks/header.styl'
 @import './blocks/promo.styl'
 @import './blocks/how_it_works.styl'
+@import './blocks/documentation.styl'
