--- a/src/jade/blocks/documentation.jade
+++ b/src/jade/blocks/documentation.jade
@@ -1,20 +1,19 @@
 .documentation
 	._container
 		h1.block_header Detailed documentation
-		.carousel
-			ul
-				li.slide
-					img(src="img/slider/1.png")
-					h4 At vero eos ettt accumus iusto o dnsimos
-					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum a iste dolorum eius ipsum, repellat ullam aspernatur dolores vitae aut! Sit necessitatibus a dicta nostrum doloremque dolore perferendis repudiandae deleniti ipsa eum quae eveniet minus, quibusdam deserunt, vero possimus alias.
-					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla veritatis qui reprehenderit blanditiis labore, cupiditate vero suscipit, quasi id quisquam?
-				li.slide
-					img(src="img/slider/1.png")
-					h4 At vero eos ettt accumus iusto o dnsimos
-					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum a iste dolorum eius ipsum, repellat ullam aspernatur dolores vitae aut! Sit necessitatibus a dicta nostrum doloremque dolore perferendis repudiandae deleniti ipsa eum quae eveniet minus, quibusdam deserunt, vero possimus alias.
-					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla veritatis qui reprehenderit blanditiis labore, cupiditate vero suscipit, quasi id quisquam?
-				li.slide
-					img(src="img/slider/1.png")
-					h4 At vero eos ettt accumus iusto o dnsimos
-					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum a iste dolorum eius ipsum, repellat ullam aspernatur dolores vitae aut! Sit necessitatibus a dicta nostrum doloremque dolore perferendis repudiandae deleniti ipsa eum quae eveniet minus, quibusdam deserunt, vero possimus alias.
-					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla veritatis qui reprehenderit blanditiis labore, cupiditate vero suscipit, quasi id quisquam?
+		.carousel(data-slick='{"slidesToShow": 1, "slidesToScroll": 1, "arrows": false}')
+			div.slide
+				img(src="img/slide1.png")
+				h4 At vero eos ettt accumus iusto o dnsimos
+				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum a iste dolorum eius ipsum, repellat ullam aspernatur dolores vitae aut! Sit necessitatibus a dicta nostrum doloremque dolore perferendis repudiandae deleniti ipsa eum quae eveniet minus, quibusdam deserunt, vero possimus alias.
+				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla veritatis qui reprehenderit blanditiis labore, cupiditate vero suscipit, quasi id quisquam?
+			div.slide
+				img(src="img/slide2.png")
+				h4 At vero eos ettt accumus iusto o dnsimos
+				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum a iste dolorum eius ipsum, repellat ullam aspernatur dolores vitae aut! Sit necessitatibus a dicta nostrum doloremque dolore perferendis repudiandae deleniti ipsa eum quae eveniet minus, quibusdam deserunt, vero possimus alias.
+				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla veritatis qui reprehenderit blanditiis labore, cupiditate vero suscipit, quasi id quisquam?
+			div.slide
+				img(src="img/slide3.png")
+				h4 At vero eos ettt accumus iusto o dnsimos
+				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum a iste dolorum eius ipsum, repellat ullam aspernatur dolores vitae aut! Sit necessitatibus a dicta nostrum doloremque dolore perferendis repudiandae deleniti ipsa eum quae eveniet minus, quibusdam deserunt, vero possimus alias.
+				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla veritatis qui reprehenderit blanditiis labore, cupiditate vero suscipit, quasi id quisquam?
