documentation slider styles

--- a/src/jade/blocks/documentation.jade
+++ b/src/jade/blocks/documentation.jade
@@ -1,7 +1,7 @@
 .documentation
 	._container
 		h1.block_header Detailed documentation
-		.carousel(data-slick='{"slidesToShow": 1, "slidesToScroll": 1, "arrows": false}')
+		.carousel(data-slick='{"slidesToShow": 1, "slidesToScroll": 1, "arrows": false, "dots": true}')
 			div.slide
 				img(src="img/slide1.png")
 				h4 At vero eos ettt accumus iusto o dnsimos
