--- a/src/styl/blocks/documentation.styl
+++ b/src/styl/blocks/documentation.styl
@@ -1,3 +1,40 @@
 .documentation
+	background-color #f5f5f5
 	._container
 		gs('fluid')
+	.carousel
+		h4
+			font-size em(21)
+			color #2e90b8
+			font-weight 300
+			text-align center
+		img
+			max-width 100%
+			max-height em(200)
+			margin 0 auto
+		p
+			margin em(5)
+			font-weight 300
+			font-size em(15)
+			color GRAY
+		.slide
+			padding em(40) 0
+		.slick-dots
+			text-align center
+			list-style-type none
+			padding 0
+			font-size 0
+			margin-top em(20)
+			li
+				display inline-block
+				padding 0 rem(3)
+			button
+				border none
+				border-radius 50%
+				size rem(15)
+				display block
+				outline none
+				background-color #fff
+			li.slick-active
+				button
+					background-color BLUE
