--- a/src/styl/blocks/documentation.styl
+++ b/src/styl/blocks/documentation.styl
@@ -1,5 +1,6 @@
 .documentation
 	background-color #f5f5f5
+	padding em(20) 0
 	._container
 		gs('fluid')
 	.carousel
@@ -38,3 +39,15 @@
 			li.slick-active
 				button
 					background-color BLUE
+
++media-query( all, min-width 960px )
+	.documentation
+		._container
+			gs('fixed')
+		.carousel
+			img
+				max-height em(350)
+			.slide-img
+				col(6)
+			.slide-text
+				col(6)
