--- a/src/styl/blocks/documentation.styl
+++ b/src/styl/blocks/documentation.styl
@@ -39,7 +39,7 @@
 			li.slick-active
 				button
 					background-color BLUE
-
+// media for big screen
 +media-query( all, min-width 960px )
 	.documentation
 		._container
