header of product block

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -24,3 +24,4 @@ body
 	include ./blocks/promo.jade
 	include ./blocks/how_it_works.jade
 	include ./blocks/documentation.jade
+	include ./blocks/product.jade
