--- a/src/styl/index.styl
+++ b/src/styl/index.styl
@@ -20,6 +20,15 @@ h1.block_header
 h1.block_header::after
 	content " —"
 
+h2.block_subheader
+	width 50%
+	text-align center
+	margin 0 auto
+	font-size em(16)
+	font-weight 300
+	color GREY
+	font-style italic
+	padding-bottom em(25)
 body
 	font-family 'Open Sans', sans-serif
 
@@ -28,3 +37,4 @@ body
 @import './blocks/promo.styl'
 @import './blocks/how_it_works.styl'
 @import './blocks/documentation.styl'
+@import './blocks/product.styl'
