galary img, styles, structures

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -16,6 +16,12 @@ head
 	script
 		include ./g_scripts/slick.js/slick/slick.min.js
 
+	//- Magnefic-popup including
+	style
+		include ./g_scripts/magnific-popup/dist/magnific-popup.css
+	script
+		include ./g_scripts/magnific-popup/dist/jquery.magnific-popup.min.js
+
 	//- Main script
 	script 
 		include ./main.js
