--- a/src/jade/blocks/product.jade
+++ b/src/jade/blocks/product.jade
@@ -3,3 +3,19 @@
 		h1.block_header Product
 		h2.block_subheader Passion for design, combined with the best technology, delivers features to you, working better than ever.
 		.galary
+			a.galary_item(href="/img/cats/1.jpg") 
+				img(src="/img/cats/1.jpg", alt="")
+			a.galary_item(href="/img/cats/2.jpg")
+				img(src="/img/cats/2.jpg", alt="")
+			a.galary_item(href="/img/cats/3.jpg")
+				img(src="/img/cats/3.jpg", alt="")
+			a.galary_item(href="/img/cats/4.jpg")
+				img(src="/img/cats/4.jpg", alt="")
+			a.galary_item(href="/img/cats/5.jpg")
+				img(src="/img/cats/5.jpg", alt="")
+			a.galary_item(href="/img/cats/6.jpg")
+				img(src="/img/cats/6.jpg", alt="")
+			a.galary_item(href="/img/cats/7.jpg")
+				img(src="/img/cats/7.jpg", alt="")
+			a.galary_item(href="/img/cats/8.jpg")
+				img(src="/img/cats/8.jpg", alt="")
