--- a/src/styl/blocks/product.styl
+++ b/src/styl/blocks/product.styl
@@ -1,3 +1,22 @@
 .product
 	._container
-		gs('fluid')
+		gs('fluid', 4)
+	.galary
+		.galary_item
+			col(2)
+			display inline-block
+			font-size 0
+			background-color #333
+			margin-bottom rem(15)
+			border-radius rem(10)
+		img
+			max-width 100%
+
++media-query( all, min-width 960px )
+	.product
+		._container
+			gs('fixed')
+		.galary
+			.galary_item
+				col(3)
+				margin-bottom 15px
