--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -31,3 +31,4 @@ body
 	include ./blocks/how_it_works.jade
 	include ./blocks/documentation.jade
 	include ./blocks/product.jade
+	include ./blocks/subscribe.jade
