--- a/src/styl/index.styl
+++ b/src/styl/index.styl
@@ -38,3 +38,4 @@ body
 @import './blocks/how_it_works.styl'
 @import './blocks/documentation.styl'
 @import './blocks/product.styl'
+@import './blocks/subscribe.styl'
