--- a/src/jade/blocks/subscribe.jade
+++ b/src/jade/blocks/subscribe.jade
@@ -1,4 +1,5 @@
 section.subscribe
+	._container
 	h1.block_header Subscribe to our newsletter
 	h2.block_subheader Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae
 	form
