hover bgc of subscribe button

--- a/src/styl/blocks/subscribe.styl
+++ b/src/styl/blocks/subscribe.styl
@@ -40,6 +40,9 @@
 		text-transform uppercase
 		color white
 		background-color RED
+		transition background-color 0.18s ease-in 0.09s
+	button:hover
+		background-color red
 	.social-buttons
 		list-style none
 		text-align center
