--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -32,4 +32,4 @@ body
 	include ./blocks/documentation.jade
 	include ./blocks/product.jade
 	include ./blocks/subscribe.jade
-	p asdf
+	include ./blocks/packages.jade
