--- a/src/styl/index.styl
+++ b/src/styl/index.styl
@@ -40,3 +40,4 @@ body
 @import './blocks/documentation.styl'
 @import './blocks/product.styl'
 @import './blocks/subscribe.styl'
+@import './blocks/packages.styl'
