media for 960px

--- a/src/styl/blocks/packages.styl
+++ b/src/styl/blocks/packages.styl
@@ -1,8 +1,8 @@
 .packages
-	gs('fluid', 4)
+	gs('fluid')
 	padding em(20) 0
 	.package
-		col(4)
+		col(5.94)
 		border-radius em(10)
 		border 1px solid #dbdbdb
 		color GREY
@@ -60,3 +60,8 @@
 			color white
 		li
 			border-color white
++media-query( all, min-width 960px )
+	.packages
+		gs('fixed')
+		.package
+			col(2.96)
