--- a/src/styl/blocks/packages.styl
+++ b/src/styl/blocks/packages.styl
@@ -52,6 +52,9 @@
 			padding 0 10% 0
 			border-radius em(5)
 			font-size em(18)
+			transition background-color 0.2s ease-out 0.1s
+		button:hover
+			background-color red
 	.standart
 		background-color BLUE
 		color white
