file of contact block

--- a/src/styl/index.styl
+++ b/src/styl/index.styl
@@ -41,3 +41,4 @@ body
 @import './blocks/product.styl'
 @import './blocks/subscribe.styl'
 @import './blocks/packages.styl'
+@import './blocks/contact.styl'
