--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -33,3 +33,4 @@ body
 	include ./blocks/product.jade
 	include ./blocks/subscribe.jade
 	include ./blocks/packages.jade
+	include ./blocks/contact.jade
