--- a/src/jade/blocks/contact.jade
+++ b/src/jade/blocks/contact.jade
@@ -10,5 +10,6 @@ mixin contactWay(fa_icon, contactWayHeader, contactWayDescription)
 	+contactWay('fa-map-marker', 'Office location', 'Russia, MO, Puchino')
 	+contactWay('fa-mobile', 'Call us', '8-925-526-2702')
 	+contactWay('fa-envelope-o', 'Email', 'semen.bko@ya.ru')
-	+contactWay('fa-clock-o', 'Working hours', 'Monday-Sunday 12:00 - 21:00')
+	+contactWay('fa-clock-o', 'Working hours', 'All time 12:00 - 21:00')
+|<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18382.428758892613!2d37.623263999999985!3d54.83613500000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x41350ec6cdc92c5f%3A0x71cd8fe533f67c85!2z0J_Rg9GJ0LjQvdC-LCDQnNC-0YHQutC-0LLRgdC60LDRjyDQvtCx0LsuLCAxNDIyOTA!5e0!3m2!1sru!2sru!4v1427482442665" width="100%" height="450" frameborder="0" style="border:0""></iframe>
 
