--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -34,3 +34,4 @@ body
 	include ./blocks/subscribe.jade
 	include ./blocks/packages.jade
 	include ./blocks/contact.jade
+	include ./blocks/footer.jade
