--- a/src/styl/index.styl
+++ b/src/styl/index.styl
@@ -42,3 +42,4 @@ body
 @import './blocks/subscribe.styl'
 @import './blocks/packages.styl'
 @import './blocks/contact.styl'
+@import './blocks/footer.styl'
